--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^4.11.0",
+    "@next/font": "13.0.5",
+    "@prisma/client": "4.6.1",
     "@types/bcrypt": "^5.0.0",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
-    "next-auth": "^4.20.1",
-    "prisma": "^4.11.0",
+    "next": "13.0.5",
+    "next-auth": "4.17.0",
+    "prisma": "4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
