fixed issues and migrate prisma

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Create a MySQL database with 2 clicks (no account needed): https://railway.app/
-DATABASE_URL="mysql://root:1234@localhost/next_auth"
+DATABASE_URL="mysql://root:1234@localhost:3306/next_auth"
+# command to execute to maigrate prisma: npx prisma migrate dev --name init
 
 # Generate one here: https://generate-secret.vercel.app/32 (only required for localhost)
 NEXTAUTH_SECRET=e36912ac48c48c6d36893090dcf7f35f
