add migrate script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "prebuild": "prisma generate",
     "predev": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy"
+    "prisma:migrate": "npx prisma migrate dev"
   },
   "dependencies": {
     "@next/font": "13.0.5",
